--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <body>
     <div class="es-essentia" id="es-essentia">
       <div class="es-kv">
-        <img src="img/kv-mb.jpg" alt="" class="es-kv__kv es-kv__kv--mobile" />
-        <img src="img/kv-dt.jpg" alt="" class="es-kv__kv es-kv__kv--desktop" />
-        <img src="img/logo.png" alt="" class="es-kv__logo" />
-        <img src="img/new.png" alt="" class="es-kv__new" />
+        <img src="img/kv-mb.jpg" loading="lazy" alt="" class="es-kv__kv es-kv__kv--mobile" />
+        <img src="img/kv-dt.jpg" loading="lazy" alt="" class="es-kv__kv es-kv__kv--desktop" />
+        <img src="img/logo.png" loading="lazy" alt="" class="es-kv__logo" />
+        <img src="img/new.png" loading="lazy" alt="" class="es-kv__new" />
 
         <h3 class="es-kv__title">
           Czuj się<br />
           młodziej,<br />
           dłużej
         </h3>
-        <img src="img/packshot.png" alt="" class="es-kv__packshot" />
+        <img src="img/packshot.png" loading="lazy" alt="" class="es-kv__packshot" />
       </div>
 
       <div class="es-nav">
@@ -55,7 +55,7 @@
 
       <div id="essentia" class="es-features">
         <div class="es-features__feature">
-          <img src="img/feature-1.jpg" alt="" class="es-features__img" />
+          <img src="img/feature-1.jpg" loading="lazy" alt="" class="es-features__img" />
           <p class="es-features__title">Zachowaj zdrową wątrobę na dłużej</p>
           <p class="es-features__text">
             Twoja wątroba odpowiada m.in za&nbsp;procesy energetyczne i&nbsp;sprawia,
@@ -64,7 +64,7 @@
           </p>
         </div>
         <div class="es-features__feature">
-          <img src="img/feature-2.jpg" alt="" class="es-features__img" />
+          <img src="img/feature-2.jpg" loading="lazy" alt="" class="es-features__img" />
           <p class="es-features__title">
             Wspomaga detoksykację oraz metabolizm tluszczów<sup>1,2</sup>
           </p>
@@ -77,7 +77,7 @@
           </p>
         </div>
         <div class="es-features__feature">
-          <img src="img/feature-3.jpg" alt="" class="es-features__img" />
+          <img src="img/feature-3.jpg" loading="lazy" alt="" class="es-features__img" />
           <p class="es-features__title">Unikalny skład<sup>2,4</sup></p>
           <p class="es-features__text">
             Cholina zawarta w&nbsp;suplemencie diety pomaga w&nbsp;utrzymaniu prawidłowego
@@ -87,7 +87,7 @@
           </p>
         </div>
         <div class="es-features__feature">
-          <img src="img/feature-4.jpg" alt="" class="es-features__img" />
+          <img src="img/feature-4.jpg" loading="lazy" alt="" class="es-features__img" />
           <p class="es-features__title">Na 2 tygodnie stosowania</p>
           <p class="es-features__text">
             Opakowanie Essentia Proactive&nbsp;wystarcza na&nbsp;dwutygodniowe
@@ -140,6 +140,7 @@
                   <img
                     src="img/support-1.png"
                     alt=""
+                    loading="lazy"
                     class="es-support__icon es-support__icon--big"
                   />
                   <div class="es-support__text-wrapper">
@@ -164,6 +165,7 @@
                   <img
                     src="img/support-2.png"
                     alt=""
+                    loading="lazy"
                     class="es-support__icon es-support__icon--big"
                   />
                   <div class="es-support__text-wrapper">
@@ -187,6 +189,7 @@
                   <img
                     src="img/support-3.png"
                     alt=""
+                    loading="lazy"
                     class="es-support__icon es-support__icon--big"
                   />
                   <div class="es-support__text-wrapper">
@@ -262,11 +265,13 @@
                   <img
                     src="img/info-1.jpg"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--mobile"
                   />
                   <img
                     src="img/info-1-dt.png"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--desktop"
                   />
                   <p class="es-info__desc">
@@ -290,11 +295,13 @@
                     <img
                       src="img/infoa-1.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--mobile"
                     />
                     <img
                       src="img/infoa-1-dt.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--desktop"
                     />
                   </div>
@@ -307,11 +314,13 @@
                   <img
                     src="img/info-2.jpg"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--mobile"
                   />
                   <img
                     src="img/info-2-dt.png"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--desktop"
                   />
                   <p class="es-info__desc">
@@ -338,11 +347,13 @@
                     <img
                       src="img/infoa-2.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--mobile"
                     />
                     <img
                       src="img/infoa-2-dt.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--desktop"
                     />
                   </div>
@@ -355,11 +366,13 @@
                   <img
                     src="img/info-3.jpg"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--mobile"
                   />
                   <img
                     src="img/info-3-dt.png"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--desktop"
                   />
                   <p class="es-info__desc">
@@ -383,11 +396,13 @@
                     <img
                       src="img/infoa-3.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--mobile"
                     />
                     <img
                       src="img/infoa-3-dt.jpg"
                       alt=""
+                      loading="lazy"
                       class="es-info__asset es-info__asset--desktop"
                     />
                   </div>
@@ -400,11 +415,13 @@
                   <img
                     src="img/info-4.jpg"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--mobile"
                   />
                   <img
                     src="img/info-4-dt.png"
                     alt=""
+                    loading="lazy"
                     class="es-info__img es-info__img--desktop"
                   />
                   <p class="es-info__desc">
@@ -461,7 +478,7 @@
         </div>
         <div class="es-dosage__items">
           <div class="es-dosage__item">
-            <img src="img/pills.png" alt="" class="es-dosage__img" />
+            <img src="img/pills.png" loading="lazy" alt="" class="es-dosage__img" />
             <div class="es-dosage__content">
               <p class="es-dosage__desc">
                 2&nbsp;kapsułki<br />
@@ -470,7 +487,7 @@
             </div>
           </div>
           <div class="es-dosage__item">
-            <img src="img/cal.png" alt="" class="es-dosage__img" />
+            <img src="img/cal.png" loading="lazy" alt="" class="es-dosage__img" />
             <div class="es-dosage__content">
               <p class="es-dosage__desc">
                 opakowanie<br />
@@ -499,19 +516,19 @@
               <p class="es-comp__text">24 mg Witaminy C</p>
               <p class="es-comp__text">3,6 mg Witaminy E</p>
             </div>
-            <img src="img/cholina.png" alt="" class="es-comp__img" />
+            <img src="img/cholina.png" loading="lazy" alt="" class="es-comp__img" />
           </div>
           <div class="es-comp__items">
             <div class="es-comp__item">
-              <img src="img/comp-1.png" alt="" class="es-comp__icon" />
+              <img src="img/comp-1.png" loading="lazy" alt="" class="es-comp__icon" />
               <p class="es-comp__desc">Wegański</p>
             </div>
             <div class="es-comp__item">
-              <img src="img/comp-2.png" alt="" class="es-comp__icon" />
+              <img src="img/comp-2.png" loading="lazy" alt="" class="es-comp__icon" />
               <p class="es-comp__desc">Bez glutenu</p>
             </div>
             <div class="es-comp__item">
-              <img src="img/comp-3.png" alt="" class="es-comp__icon" />
+              <img src="img/comp-3.png" loading="lazy" alt="" class="es-comp__icon" />
               <p class="es-comp__desc">Bez laktozy</p>
             </div>
           </div>
@@ -529,21 +546,21 @@
               <p class="es-comp__text">3,6 mg Witaminy E</p>
             </div>
             <div>
-              <img src="img/cholina.png" alt="" class="es-comp__img" />
+              <img src="img/cholina.png" loading="lazy" alt="" class="es-comp__img" />
             </div>
           </div>
           <div class="es-comp__texts">
               <div class="es-comp__items">
               <div class="es-comp__item">
-                <img src="img/comp-1.png" alt="" class="es-comp__icon" />
+                <img src="img/comp-1.png" loading="lazy" alt="" class="es-comp__icon" />
                 <p class="es-comp__desc">Wegański</p>
               </div>
               <div class="es-comp__item">
-                <img src="img/comp-2.png" alt="" class="es-comp__icon" />
+                <img src="img/comp-2.png" loading="lazy" alt="" class="es-comp__icon" />
                 <p class="es-comp__desc">Bez glutenu</p>
               </div>
               <div class="es-comp__item">
-                <img src="img/comp-3.png" alt="" class="es-comp__icon" />
+                <img src="img/comp-3.png" loading="lazy" alt="" class="es-comp__icon" />
                 <p class="es-comp__desc">Bez laktozy</p>
               </div>
             </div>
@@ -560,20 +577,20 @@
               <tr>
                 <th class="es-table__emptyColumn"></th>
                 <th class="es-table__green--top">
-                  <img class="es-table__img" src="img/product-1.jpg" alt="" />
+                  <img class="es-table__img" src="img/product-1.jpg" loading="lazy" alt="" />
                   <p class="es-table__name es-table__name--green">
                     Essentia Proactive
                   </p>
                 </th>
                 <th></th>
                 <th class="es-table__orange--topLeft">
-                  <img class="es-table__img" src="img/product-2.jpg" alt="" />
+                  <img class="es-table__img" src="img/product-2.jpg" loading="lazy" alt="" />
                   <p class="es-table__name es-table__name--orange">
                     Essentiale Forte
                   </p>
                 </th>
                 <th class="es-table__orange--topRight">
-                  <img class="es-table__img" src="img/product-3.jpg" alt="" />
+                  <img class="es-table__img" src="img/product-3.jpg" loading="lazy" alt="" />
                   <p class="es-table__name es-table__name--red">
                     Essentiale Max
                   </p>
@@ -722,7 +739,7 @@
         <p class="es-disclaimer__mat">
           MAT-PL-2300611-2.0-04.2023
         </p>
-        <img src="./img/logo_sanofi.png" alt="sanofi" class="es-disclaimer__sanofi">
+        <img src="./img/logo_sanofi.png" loading="lazy" alt="sanofi" class="es-disclaimer__sanofi">
       </div>
     </div>
     </div>
