--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
                 <td class="es-table__emptyColumn"></td>
                 <td class="es-table__orange--sideLeft es-table__orange--sideRight" colspan="2">
                   Leczenie chorób wątroby. Zmniejsza subiektywne dolegliwości, takie jak:
-                  brak apetytu, uczucie ucisku w prawym nadbrzuszu
-                  spowodowane uszkodzeniem wątroby w wyniku nieprawidłowej diety,
-                  działania substancji toksycznych lub w przebiegu zapalenia wątroby<sup>8</sup>
+                  brak apetytu, uczucie ucisku w&nbsp;prawym nadbrzuszu
+                  spowodowane uszkodzeniem wątroby w&nbsp;wyniku nieprawidłowej diety,
+                  działania substancji toksycznych lub w&nbsp;przebiegu zapalenia wątroby<sup>8</sup>
                 </td>
               </tr>
               <tr>
