add down arrows

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="es-essentia" id="es-essentia">
@@ -374,6 +375,7 @@
       <div id="stosowanie" class="es-dosage">
         <div class="es-dosage__btn">
           <p class="es-dosage__title">Stosowanie</p>
+          <i class="fa fa-angle-down es-dosage__arrow"></i>
         </div>
        <div class="es-dosage__mainCtn">
         <div class="es-dosage__wrapper"> 
@@ -408,6 +410,7 @@
       <div id="sklad" class="es-comp">
         <div class="es-comp__btn" id="es-comp__btn">
           <p class="es-comp__title">Unikalny skład<sup>4</sup></p>
+          <i class="fa fa-angle-down es-dosage__arrow"></i>
         </div>
        <div class="es-comp__hiddenCtn">
         <div class="es-comp__content es-comp__content--mobile">
