--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
         </div>
       </div>
 
-      <div id="stosowanie" class="es-dosage">
-        <div class="es-dosage__btn">
+      <details id="stosowanie" class="es-dosage">
+        <summary class="es-dosage__btn">
           <p class="es-dosage__title">Stosowanie</p>
           <i class="fa fa-angle-down es-dosage__arrow"></i>
-        </div>
+        </summary>
        <div class="es-dosage__mainCtn">
         <div class="es-dosage__wrapper"> 
           <p class="es-dosage__text">
@@ -405,13 +405,13 @@
           </div>
         </div>
        </div>
-      </div>
+      </details>
 
-      <div id="sklad" class="es-comp">
-        <div class="es-comp__btn" id="es-comp__btn">
+      <details id="sklad" class="es-comp">
+        <summary class="es-comp__btn" id="es-comp__btn">
           <p class="es-comp__title">Unikalny skład<sup>4</sup></p>
           <i class="fa fa-angle-down es-dosage__arrow"></i>
-        </div>
+        </summary>
        <div class="es-comp__hiddenCtn">
         <div class="es-comp__content es-comp__content--mobile">
           <div class="es-comp__texts">
@@ -476,7 +476,7 @@
           </div>
         </div>
        </div>
-      </div>
+      </details>
 
       <div id="preparaty" class="es-table">
         <p class="es-table__title">Poznaj produkty z rodziny Essentiale</p>
@@ -651,7 +651,7 @@
     </div>
 
    
-    <script>
+    <!-- <script>
       
     const hiddenContent = document.querySelector('.es-comp__hiddenCtn')
     const toggleBtn = document.querySelector('#es-comp__btn')
@@ -672,6 +672,6 @@
             hiddenDosage.classList.toggle('es-dosage__hide');
 
             });
-        </script> 
+        </script>  -->
   </body>
 </html>
