--- a/index.html
+++ b/index.html
@@ -181,7 +181,20 @@
 
       </div>
 
-      
+      <div class="es-video">
+            <div class="es-video__videoCnt">
+                <div class="es-video__container">
+                  <iframe 
+                  class="es-video__iframe" 
+                  width="100%" height="auto" 
+                  src="https://www.youtube.com/embed/J9jxrPPuBxs" 
+                  frameborder="0" 
+                  title="Zobacz filmik z YT"
+                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
 
       <details id="stosowanie" class="es-dosage">
         <summary class="es-dosage__btn">
