--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Essentia</title>
+    <title>Essentia Proactive CENEO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -37,9 +37,7 @@
         <div class="es-nav__item">
           <a class="es-nav__link" href="#korzysci">Korzyści dla wątroby</a>
         </div>
-        <div class="es-nav__item">
-          <a class="es-nav__link" href="#styl">Zachowaj swój styl życia</a>
-        </div>
+        
         <div class="es-nav__item">
           <a class="es-nav__link" href="#stosowanie">Stosowanie</a>
         </div>
@@ -51,7 +49,9 @@
           <a class="es-nav__link" href="#preparaty"
             >Preparaty wspierające wątrobę</a>
         </div>
-
+<div class="es-nav__item">
+          <a class="es-nav__link" href="#styl">Zachowaj swój styl życia</a>
+        </div>
       </div>
 
       <div id="essentia" class="es-features">
