--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 </head>
 
 <body>
@@ -195,7 +195,7 @@
     <details id="stosowanie" class="es-dosage">
       <summary class="es-dosage__btn">
         <p class="es-dosage__title">Stosowanie</p>
-        <i class="fa fa-angle-down es-dosage__arrow"></i>
+        <p class="es-dosage__arrow">Rozwiń &darr;</p>
       </summary>
       <div class="es-dosage__mainCtn">
         <div class="es-dosage__wrapper">
@@ -234,7 +234,7 @@
     <details id="sklad" class="es-comp">
       <summary class="es-comp__btn" id="es-comp__btn">
         <p class="es-comp__title">Unikalny skład<sup>4</sup></p>
-        <i class="fa fa-angle-down es-dosage__arrow"></i>
+        <p class="es-dosage__arrow">Rozwiń &darr;</p>
       </summary>
       <div class="es-comp__hiddenCtn">
         <div class="es-comp__content es-comp__content--mobile">
@@ -409,16 +409,10 @@
     <div id="styl" class="es-info">
       <!-- <div thumbsSlider="" class="swiper swiperNav">
         </div> -->
-      <details>
-        <summary class="es-info__btn">
-          <p class="es-info__mainTitle">Czy wiesz, że...</p>
-          <i class="fa fa-angle-down es-info__arrow"></i>
-        </summary>
-        <div id="jak-dbac" class="swiper swiper2 es-info__mainCtn">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div id="aktywny" class="es-info__slide">
-                <div class="es-info__up">
+        <div class="es-info__btn">
+          <p class="es-info__mainTitle">Jak zadbać o zdrową wątrobę?</p>
+        </div>
+        <div class="es-info__up">
                   <img src="img/info-1.jpg"
                     alt="Uśmiechnięta kobieta na rowerze, obok, mężczyzna z kubkiem kawy; preparat na wątrobę Essentia Proactive, 30 kapsułek, kupisz na Ceneo."
                     loading="lazy" class="es-info__img es-info__img--mobile" />
@@ -432,6 +426,16 @@
                     osiągać najlepsze wyniki.
                   </p>
                 </div>
+      <details>
+        <summary class="es-info__btn">
+          <p class="es-info__mainTitle"></p>
+          <p class="es-dosage__arrow">Rozwiń &darr;</p>
+        </summary>
+        <div id="jak-dbac" class="swiper swiper2 es-info__mainCtn">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div id="aktywny" class="es-info__slide">
+                
                 <div class="es-info__down">
                   <div class="es-info__wrapper">
                     <div class="es-info__content">
