hotfix video lazy loading

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="es-video">
       <div class="es-video__videoCnt">
         <div class="es-video__container">
-          <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/J9jxrPPuBxs"
+          <iframe class="es-video__iframe" width="100%" height="auto" loading="lazy" src="https://www.youtube.com/embed/J9jxrPPuBxs"
             frameborder="0" title="Zobacz filmik z YT"
             allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
