hotfix: iframe video

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     /> -->
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   </head>
 
   <body>
@@ -67,9 +66,7 @@
           <a class="es-nav__link" href="#sklad">Składniki</a>
         </div>
         <div class="es-nav__item">
-          <a class="es-nav__link" href="#preparaty"
-            >Preparaty wspierające wątrobę</a
-          >
+          <a class="es-nav__link" href="#preparaty">Preparaty wspierające wątrobę</a>
         </div>
         <div class="es-nav__item">
           <a class="es-nav__link" href="#styl">Zachowaj swój styl życia</a>
